# excaligen

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  build.py  build_pypi_readme.py  hatch_build.py  index.html  llms.txt  mind_map.excalidraw  mkdocs.yml  pie_chart.excalidraw  pyproject.toml  surprise.excalidraw  test.excalidraw  workflow_arrows.excalidraw  x.excalidraw
.agents/rules/: venv.md
.github/workflows/: publish.yml  test.yml
api/: index.html
api/arrow/: index.html
api/color/: index.html
api/defaults/: index.html
api/diamond/: index.html
api/ellipse/: index.html
api/frame/: index.html
api/group/: index.html
api/image/: index.html
api/line/: index.html
api/rectangle/: index.html
api/scenebuilder/: index.html
api/text/: index.html
doc/: build.py
docs/: build.py  index.md  manual.md
docs/api/: arrow.md  color.md  defaults.md  diamond.md  ellipse.md  frame.md  group.md  image.md  index.md  line.md  rectangle.md  scenebuilder.md  text.md
docs/guide/: index.md
docs/manual/: index.md
examples/: arc.py  arrow.py  arrow_elbow.py  arrows.py  elbow.py  example.py  hello.py  hello_world.py  image.py  index.py  label.py  line.py  mind_map.py  mind_map_structure.py  options.py  pie_chart.py  sample.py  sandbox.py  spline.py  styles_demo.excalidraw  styles_demo.py  surprise.py  texts.py  workflow_arrows.py
guide/: index.html
search/: search_index.json
src/: Excalidraw.py  Excaligen.py  api.py
src/config/: Config.py
src/excaligen/: DiagramBuilder.py  __init__.py  (+1 more)
tests/: test_AbstractElement.py  test_Excalidraw.py
(+176 files in other folders)
