[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = [
    "--import-mode=importlib",
]

[tool.hatch.build.targets.wheel]
packages = ["src/excaligen"]

[tool.hatch.build]
artifacts = [
    "src/excaligen/*.py",
    "src/excaligen/**/*.py"
]

[project]
name = "excaligen"
version = "0.11.4"
description = "Python library for generating Excalidraw diagrams"
authors = [
    {name = "Milan Piskla", email = "milan.piskla@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
keywords = ["excalidraw", "diagram", "drawing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/milanpiskla/excaligen"
Documentation = "https://github.com/milanpiskla/excaligen/docs"
Repository = "https://github.com/milanpiskla/excaligen.git"
